--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     margin:0;
     padding:0;
 }
+li{
+    list-style:none;
+}
 .wrapper{
     width:100%;
     min-height:200px;
@@ -256,4 +259,70 @@
     height:24px;
     margin-top:16px;
     margin-left:16px;
+}
+.destinations{
+    width:1360px;
+    min-height:200px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:120px;
+}
+.dest-upper{
+    width:100%;
+    height:112px;
+    display:flex;
+}
+.dest-upper h1{
+    font-family:'Poppins', sans-serif;
+    font-weight:600;
+    font-size:32px;
+    line-height:48px;
+    width:1240px;
+}
+.dest-search{
+    width:95px;
+    height:20px;
+    background-color:#F6F4FF;
+    border-radius:12px;
+    display:flex;
+    padding:10px;
+}
+.dest-search p{
+    font-family:'Poppins', sans-serif;
+    font-size:16px;
+    font-weight:200;
+    color:#7B61FF;
+}
+.dest-search img{
+    width:20px;
+    height:20px;
+    margin-left:4px;
+}
+.dest-lower{
+    width:1360px;
+    height:232px;
+    display:flex;
+}
+.dest-lower li{
+    width:200px;
+    height:232px;
+    margin-right:32px;
+}
+.dest-lower li img{
+    width:200px;
+    height:180px;
+    border-radius:24px;
+}
+.dest-lower li h1{
+    font-family:'Poppins', sans-serif;
+    font-size:16px;
+    line-height:24px;
+    font-weight:500;
+    margin-top:8px;
+}
+.dest-lower li p{
+    font-family:'Poppins', sans-serif;
+    font-size:14px;
+    line-height:20px;
+    font-weight:400px;
 }
